--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
 		"build:test": "cross-env NODE_ENV=test next build",
 		"build:production": "cross-env NODE_ENV=production next build",
 		"start": "next start --port 3005",
+		"create-app": "node ./command/create-main.mjs",
 		"lint-next": "next lint",
 		"lint": "npm run lint:css && npm run lint:js",
-		"lint:css": "stylelint \"app/**/*.css\"",
-		"lint:js": "eslint \"app/**/*.{js,jsx,ts,tsx}\"",
+		"lint:css": "stylelint \"{app,theme}/**/*.css\"",
+		"lint:js": "eslint \"{app,src,lib,components,pages}/**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"{command}/**/*.{js,jsx,ts,tsx}\"",
 		"format": "npm run format:css && npm run format:js",
-		"format:css": "stylelint \"app/**/*.css\" --fix --allow-empty-input",
-		"format:js": "prettier --write \"app/**/*.{js,jsx,ts,tsx}\"",
+		"format:css": "stylelint \"{app,theme}/**/*.css\" --fix --allow-empty-input",
+		"format:js": "prettier --write \"{app,src,lib,components,pages}/**/*.{js,jsx,ts,tsx}\" --ignore-pattern \"{command}/**/*.{js,jsx,ts,tsx}\"",
 		"clean:lib": "rimraf node_modules",
 		"lint-staged": "lint-staged",
 		"prepare": "husky"
